--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "start": "ts-node server.ts",
+    "start": "npx ts-node server.ts",
     "build": "tsc"
   },
   "keywords": [],
