--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "multer": "^1.4.5-lts.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
