--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": [
+    "src/**/*", // Include your source files
+    "@types/**/*" // Include the custom types
+  ]
 }
